force-app/main/default/objects/PDLM__Item__c/PDLM__Item__c.object-meta.xml
<CustomObject>
    <description>Track Items, Parts, Documents or other objects with Items and Item Revisions</description>
    <label>Item</label>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>