force-app/main/default/objects/PDLM__Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <formula>PDLM__Latest_Revision__r.Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>