force-app/main/default/objects/PDLM__Item__c/fields/PDLM__Description__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Description__c</fullName>
    <inlineHelpText>Populated by the system using the Description on Latest Item Revision</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>