force-app/main/default/objects/PDLM__Item__c/fields/PDLM__Latest_Lifecycle_Phase__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Latest_Lifecycle_Phase__c</fullName>
    <formula>BLANKVALUE(text(PDLM__Latest_Released_Revision__r.PDLM__Lifecycle_Phase__c), text(PDLM__Latest_Revision__r.PDLM__Lifecycle_Phase__c)+&quot; (Pending)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifecycle Phase</label>
    <type>Text</type>
</CustomField>