force-app/main/default/objects/PDLM__Item__c/fields/PDLM__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the pricebook this item is related to</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>