force-app/main/default/objects/PDLM__Item__c/fields/PDLM__Revision_Count__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Revision_Count__c</fullName>
    <inlineHelpText>The number of revisions</inlineHelpText>
    <label>Revision Count</label>
    <summaryForeignKey>PDLM__Item_Revision__c.PDLM__Master_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>