force-app/main/default/objects/PDLM__Item__c/validationRules/Cannot_Change_Generation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Generation</fullName>
    <active>true</active>
    <description>For Finished Goods and TLAs categories, can&apos;t change Generation after record was saved</description>
    <errorConditionFormula>AND(
    OR (
        PDLM__Category__r.PDLM__Parent__r.Name = &quot;Finished Goods&quot;,
        PDLM__Category__r.PDLM__Parent__r.Name = &quot;TLAs&quot;
    ),
     ISCHANGED(Generation__c)
    ,
     NOT(ISBLANK(CreatedDate))
)</errorConditionFormula>
    <errorMessage>For Finished Goods and TLAs Categories the fields Generation can&apos;t be changed after Item was created.</errorMessage>
</ValidationRule>