force-app/main/default/objects/PDLM__Item__c/validationRules/Generation_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Generation_Required</fullName>
    <active>true</active>
    <description>Generation  is required for  TLAs categories</description>
    <errorConditionFormula>AND(
  PDLM__Category__r.PDLM__Parent__r.Name = &quot;TLAs&quot;,
  ISPICKVAL(Generation__c, &quot;&quot;)
      
    
)</errorConditionFormula>
    <errorMessage>Generation is required for Finished Goods and TLAs categories</errorMessage>
</ValidationRule>