force-app/main/default/objects/PDLM__Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Revision__c</columns>
    <columns>NAME</columns>
    <columns>PDLM__Category__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Has_Bom__c</columns>
    <columns>PDLM__Has_Pending_Revision__c</columns>
    <columns>PDLM__Has_Attachments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PDLM__Latest_Lifecycle_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Naveen Goyal</value>
    </filters>
    <label>All Items</label>
</ListView>