force-app/main/default/objects/PDLM__Item__c/listViews/All_Supplier.listView-meta.xml
<ListView>
    <fullName>All_Supplier</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Category__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Revision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All-Supplier-Items</label>
</ListView>