force-app/main/default/objects/PDLM__Item__c/listViews/FG_002.listView-meta.xml
<ListView>
    <fullName>FG_002</fullName>
    <columns>PDLM__Revision__c</columns>
    <columns>NAME</columns>
    <columns>PDLM__Category__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PDLM__Has_Bom__c</columns>
    <columns>PDLM__Has_Pending_Revision__c</columns>
    <columns>PDLM__Has_Attachments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>002</value>
    </filters>
    <label>FG-002</label>
</ListView>