force-app/main/default/objects/PDLM__Item__c/listViews/PLSC__All_Items.listView-meta.xml
<ListView>
    <fullName>PLSC__All_Items</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Revision__c</columns>
    <columns>PDLM__Latest_Lifecycle_Phase__c</columns>
    <columns>PDLM__Has_Attachments__c</columns>
    <columns>PDLM__Has_Bom__c</columns>
    <columns>PDLM__On_Change_cb__c</columns>
    <columns>PDLM__Has_Quality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All LIC Items</label>
</ListView>