force-app/main/default/objects/PDLM__Item__c/listViews/Top_Level_Assembly.listView-meta.xml
<ListView>
    <fullName>Top_Level_Assembly</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>PDLM__Category__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>Notes__c</columns>
    <columns>PDLM__Has_Aml__c</columns>
    <columns>PDLM__Has_Attachments__c</columns>
    <columns>PDLM__Has_Bom__c</columns>
    <columns>PDLM__Has_Pending_Revision__c</columns>
    <columns>PDLM__Latest_Lifecycle_Phase__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>contains</operation>
        <value>010</value>
    </filters>
    <filters>
        <field>PDLM__Category__c</field>
        <operation>contains</operation>
        <value>020</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>190</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>200</value>
    </filters>
    <label>Top Level Assembly</label>
</ListView>